# estructura-de-datos-i-q1-2026

./: README.md
DoubleLinkedList/: CMakeLists.txt  doublell.cpp  doublell.h  main.cpp  nodedll.cpp  nodedll.h
FileManager/: CMakeLists.txt  mainwindow.ui
LinkedList/: CMakeLists.txt  main.cpp  node.h
SimpleLinkedList/: CMakeLists.txt  main.cpp  node.cpp  node.h  simplelinkedlist.cpp  simplelinkedlist.h
stackArray/: CMakeLists.txt  main.cpp  stackarr.cpp  stackarr.h
stackLL/: CMakeLists.txt  main.cpp  stack.cpp  stack.h  stacknode.cpp  stacknode.h
untitled1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
